--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,6 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 LinkingTo:
-    cpp11,
-    dust
+    cpp11
 Suggests:
     testthat
