--- a/inst/template/dust.R.template
+++ b/inst/template/dust.R.template
@@ -1,4 +1,4 @@
-sirs <- R6::R6Class(
+{{name}} <- R6::R6Class(
   "dust",
   cloneable = FALSE,
 
@@ -9,21 +9,10 @@ sirs <- R6::R6Class(
     info_ = NULL,
     n_threads_ = NULL,
     n_particles_ = NULL,
+    n_particles_each_ = NULL,
+    shape_ = NULL,
     ptr_ = NULL,
-    param_ = list(I_ini = list(has_default = FALSE, default_value = NULL,
-    rank = 0, min = -Inf, max = Inf, integer = FALSE), m = list(
-    has_default = FALSE, default_value = NULL, rank = 2, min = -Inf,
-    max = Inf, integer = FALSE), N_age = list(has_default = FALSE,
-    default_value = NULL, rank = 0, min = -Inf, max = Inf, integer = FALSE),
-    alpha = list(has_default = TRUE, default_value = 0.1, rank = 0,
-        min = -Inf, max = Inf, integer = FALSE), beta = list(
-        has_default = TRUE, default_value = 0.2, rank = 0, min = -Inf,
-        max = Inf, integer = FALSE), dt = list(has_default = TRUE,
-        default_value = 1L, rank = 0, min = -Inf, max = Inf,
-        integer = FALSE), gamma = list(has_default = TRUE, default_value = 0.1,
-        rank = 0, min = -Inf, max = Inf, integer = FALSE), S_ini = list(
-        has_default = TRUE, default_value = 1000L, rank = 0,
-        min = -Inf, max = Inf, integer = FALSE))
+    param_ = {{param}}
   ),
 
   public = list(
@@ -69,20 +58,26 @@ sirs <- R6::R6Class(
     ##' the object.
     initialize = function(pars, step, n_particles, n_threads = 1L,
                           seed = NULL, pars_multi = FALSE) {
-      res <- dust_sirs_alloc(pars, pars_multi, step, n_particles,
+      res <- dust_{{name}}_alloc(pars, pars_multi, step, n_particles,
                         n_threads, seed)
       private$pars_ <- pars
       private$pars_multi_ <- pars_multi
       private$n_threads_ <- n_threads
       private$n_particles_ <- n_particles
+      if (pars_multi) {
+        private$n_particles_each_ <- n_particles / length(pars)
+      } else {
+        private$n_particles_each_ <- n_particles
+      }
       private$ptr_ <- res[[1L]]
       private$info_ <- res[[2L]]
+      private$shape_ <- res[[3L]]
     },
 
     ##' @description
     ##' Returns friendly model name
     name = function() {
-      "sirs"
+      "{{name}}"
     },
 
     ##' @description
@@ -109,7 +104,7 @@ sirs <- R6::R6Class(
     ##' systems with more than one. In short, please leave this argument
     ##' alone unless you're developing dust.
     run = function(step_end, device = FALSE) {
-      m <- dust_sirs_run(private$ptr_, step_end, device)
+      m <- dust_{{name}}_run(private$ptr_, step_end, device)
       rownames(m) <- names(private$index_)
       m
     },
@@ -133,7 +128,7 @@ sirs <- R6::R6Class(
     ##'   greater than those before it (ties are allowed though probably
     ##'   not wanted).
     simulate = function(step_end) {
-      m <- dust_sirs_simulate(private$ptr_, step_end)
+      m <- dust_{{name}}_simulate(private$ptr_, step_end)
       rownames(m) <- names(private$index_)
       m
     },
@@ -150,7 +145,7 @@ sirs <- R6::R6Class(
     ##' elements between 1 and the length of the state (this will be
     ##' validated, and an error thrown if an invalid index is given).
     set_index = function(index) {
-      dust_sirs_set_index(private$ptr_, index)
+      dust_{{name}}_set_index(private$ptr_, index)
       private$index_ <- index
       invisible()
     },
@@ -170,13 +165,25 @@ sirs <- R6::R6Class(
     ##' @description
     ##' Returns the length of the per-particle state
     n_state = function() {
-      dust_sirs_n_state(private$ptr_)
+      dust_{{name}}_n_state(private$ptr_)
     },
 
     ##' @description
     ##' Returns the number of particles
     n_particles = function() {
       private$n_particles_
+    },
+
+    ##' @description
+    ##' Returns the number of particles per parameter set
+    n_particles_each = function() {
+      private$n_particles_each_
+    },
+
+    ##' @description
+    ##' Returns the shape of the particles
+    shape = function() {
+      private$shape_
     },
 
     ##' @description
@@ -195,7 +202,7 @@ sirs <- R6::R6Class(
     ##' particles are started from different initial steps and run up to the
     ##' larges step given (i.e., `max(step)`)
     set_state = function(state, step = NULL) {
-      dust_sirs_set_state(private$ptr_, state, step)
+      dust_{{name}}_set_state(private$ptr_, state, step)
       invisible()
     },
 
@@ -205,7 +212,7 @@ sirs <- R6::R6Class(
     ##' @param pars New pars for the model (see constructor)
     ##' @param step New initial step for the model (see constructor)
     reset = function(pars, step) {
-      private$info_ <- dust_sirs_reset(private$ptr_, pars, step)
+      private$info_ <- dust_{{name}}_reset(private$ptr_, pars, step)
       private$pars_ <- pars
       invisible()
     },
@@ -218,7 +225,7 @@ sirs <- R6::R6Class(
     ##'
     ##' @param pars New pars for the model (see constructor)
     set_pars = function(pars) {
-      private$info_ <- dust_sirs_set_pars(private$ptr_, pars)
+      private$info_ <- dust_{{name}}_set_pars(private$ptr_, pars)
       private$pars_ <- pars
     },
 
@@ -226,7 +233,7 @@ sirs <- R6::R6Class(
     ##' Return full model state
     ##' @param index Optional index to select state using
     state = function(index = NULL) {
-      m <- dust_sirs_state(private$ptr_, index)
+      m <- dust_{{name}}_state(private$ptr_, index)
       rownames(m) <- names(index)
       m
     },
@@ -234,7 +241,7 @@ sirs <- R6::R6Class(
     ##' @description
     ##' Return current model step
     step = function() {
-      dust_sirs_step(private$ptr_)
+      dust_{{name}}_step(private$ptr_)
     },
 
     ##' @description
@@ -244,7 +251,7 @@ sirs <- R6::R6Class(
     ##' take.
     reorder = function(index) {
       storage.mode(index) <- "integer"
-      dust_sirs_reorder(private$ptr_, index)
+      dust_{{name}}_reorder(private$ptr_, index)
       invisible()
     },
 
@@ -258,7 +265,7 @@ sirs <- R6::R6Class(
     ##' parameter sets.
     ##' long as all particles or be a matrix.
     resample = function(weights) {
-      invisible(dust_sirs_resample(private$ptr_, weights))
+      invisible(dust_{{name}}_resample(private$ptr_, weights))
     },
 
     ##' @description
@@ -288,7 +295,7 @@ sirs <- R6::R6Class(
     ##' a new [`dust`] object as the shorter version will be used for
     ##' the first particle, followed by jumps for each subsequent particle.
     rng_state = function(first_only = FALSE) {
-      dust_sirs_rng_state(private$ptr_, first_only)
+      dust_{{name}}_rng_state(private$ptr_, first_only)
     },
 
     ##' @description Set the random number state for this model. This
@@ -302,7 +309,7 @@ sirs <- R6::R6Class(
     ##' `$rng_state()` method. Note that unlike `seed` as passed to the
     ##' constructor, this *must* be a raw vector of the expected length.
     set_rng_state = function(rng_state) {
-      dust_sirs_set_rng_state(private$ptr_, rng_state)
+      dust_{{name}}_set_rng_state(private$ptr_, rng_state)
       invisible()
     },
 
@@ -311,9 +318,9 @@ sirs <- R6::R6Class(
     ##' "OpenMP" support, in which case it will react to the `n_threads`
     ##' argument passed to the constructor. This method can also be used
     ##' as a static method by running it directly
-    ##' as `sirs$public_methods$has_openmp()`
+    ##' as `{{name}}$public_methods$has_openmp()`
     has_openmp = function() {
-      dust_sirs_capabilities()[["openmp"]]
+      dust_{{name}}_capabilities()[["openmp"]]
     },
 
     ##' @description
@@ -336,7 +343,7 @@ sirs <- R6::R6Class(
     ##'   requested (based on environment variables and OpenMP support).
     set_n_threads = function(n_threads) {
       prev <- private$n_threads_
-      dust_sirs_set_n_threads(private$ptr_, n_threads)
+      dust_{{name}}_set_n_threads(private$ptr_, n_threads)
       private$n_threads_ <- n_threads
       invisible(prev)
     },
@@ -346,9 +353,9 @@ sirs <- R6::R6Class(
     ##' "compare" support, in which case the `set_data` and `compare_data`
     ##' methods are available (otherwise these methods will error). This
     ##' method can also be used as a static method by running it directly
-    ##' as `sirs$public_methods$has_compare()`
+    ##' as `{{name}}$public_methods$has_compare()`
     has_compare = function() {
-      dust_sirs_capabilities()[["compare"]]
+      dust_{{name}}_capabilities()[["compare"]]
     },
 
     ##' @description
@@ -361,7 +368,7 @@ sirs <- R6::R6Class(
     ##'
     ##' @param data A list of data to set.
     set_data = function(data) {
-      dust_sirs_set_data(private$ptr_, data)
+      dust_{{name}}_set_data(private$ptr_, data)
     },
 
     ##' @description
@@ -372,7 +379,7 @@ sirs <- R6::R6Class(
     ##' underlying `compare_data` function is stochastic, then each call to
     ##' this function may be result in a different answer.
     compare_data = function() {
-      dust_sirs_compare_data(private$ptr_)
+      dust_{{name}}_compare_data(private$ptr_)
     },
 
     ##' @description
@@ -388,7 +395,7 @@ sirs <- R6::R6Class(
     ##' If you have a multi-parameter dust object this will be a 4d array
     ##' (state x particles x parameter x time).
     filter = function(save_history = FALSE) {
-      dust_sirs_filter(private$ptr_, save_history)
+      dust_{{name}}_filter(private$ptr_, save_history)
     }
   ))
-class(sirs) <- c("dust_generator", class(sirs))
+class({{name}}) <- c("dust_generator", class({{name}}))
